Updated Error with Secondary.html linking

--- a/secondary/secondary.html
+++ b/secondary/secondary.html
@@ -17,7 +17,7 @@
     <div id="div">
         <p>Thank you for visiting my page. This area is under construction however, feel free to listen and enjoy the sounds of floating through space.
             <br><br>
-        <button onclick="window.location.href = '/app/index.html';">Return Home</button></p>
+        <button onclick="window.location.href = '/index.html';">Return Home</button></p>
     </div>
     <div id="container">   
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX1n9whBbBKoL?utm_source=generator&theme=0" width="50%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> 
