--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   
     <link rel="stylesheet" href="style.css">
-    <script defer src="app.js"></script>
+    <script type='text/javascript' src="app.js" defer src='config.js'></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
